discussion/kv_engine/163999/163999_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP std::any

needs
* locking/removing all use from background tasks
* splitting into multiple patches
* possibly improving interface e.g.,
   template <class T>
   std::optional<T> getEngineSpecific(CookieIface cookie);
  to possibly avoid direct std::any_cast usage

Change-Id: Idadd77ded7a7be14bf7ca290f7aa29861f294442

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-10-20 15:45:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-20 15:54:22.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35074/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35074/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41281/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13585/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:9: error: "this" argument to member function "notify" has type "const ConnMapNotifyTest", but function is not marked const [clang-diagnostic-error]
        notifyTest->notify();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2264:10: note: "notify" declared here
    void notify() {
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13585/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:9:
error: "this" argument to member function "notify" has type "const ConnMapNotifyTest", but function is not marked const [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13585/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3220/ : FAILURE

Compile error at [2021-10-20T15:49:17.751Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:9:
error: "this" argument to member function "notify" has type "const ConnMapNotifyTest", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3220/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3290/ : FAILURE

Compile error at [2021-10-20T15:51:38.388Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:28:
error: passing ?const ConnMapNotifyTest? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3290/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15197/ : FAILURE

Compile error at [2021-10-20T15:48:51.593Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:28:
error: passing ?const ConnMapNotifyTest? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15476/ : FAILURE

Compile error at [2021-10-20T15:46:58.227Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:28:
error: passing ?const ConnMapNotifyTest? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15476/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23523/ : FAILURE

Compile error at [2021-10-20T15:48:38.683Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:9:
error: "this" argument to member function "notify" has type "const ConnMapNotifyTest", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14356/ : FAILURE

Compile error at [2021-10-20T15:49:33.701Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:9:
error: "this" argument to member function "notify" has type "const ConnMapNotifyTest", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14356/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16138/ : FAILURE

Compile error at [2021-10-20T15:47:03.006Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2278:9:
error: "this" argument to member function "notify" has type "const ConnMapNotifyTest", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16138/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12384/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
